k8s/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sampleapp 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp 
    spec:
      containers:
        - name: sampleapp 
          image: k8sexamplesacr.azurecr.io/sampleapp
          ports:
          - containerPort: 80
