k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlserver
  labels:
    app: mysqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqlserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysqlserver
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: mysqlserver
        image: mysql:8
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 128Mi
        #   limits:
        #     cpu: 250m
        #     memory: 256Mi
        ports:
        - containerPort: 3306
          hostPort: 3306
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
          - mountPath: /etc/mysql/conf.d
            name: mysql-config
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-config
          persistentVolumeClaim:
            claimName: mysql-config
