k8s/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: petclinic
        image: 111122223333.azurecr.io/petclinic
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 128Mi
        #   limits:
        #     cpu: 250m
        #     memory: 256Mi
        ports:
        - containerPort: 8000
          hostPort: 8000
          protocol: TCP
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
