k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysqlserver
  name: mysqlserver
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: mysqlserver
