k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: petclinic
