k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: sampleapp
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: sampleapp
