k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sampleapp
spec:
  ingressClassName: nginx
  rules:
  - host: "anhalan.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sampleapp
            port:
              number: 80
