k8s/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-petclinic
spec:
  ingressClassName: nginx
  rules:
  - host: "anhalan.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: petclinic
            port:
              number: 8080
